<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="60dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="246dp"
        android:layout_height="347dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        app:srcCompat="@drawable/ic_welcome" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/homeRegBtn"
        android:layout_width="319dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_style"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/homeLogBtn"
        android:layout_width="319dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn2_style"
        android:text="@string/login"
        android:textColor="#37474F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeRegBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>