<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="44dp"
        android:text="@string/login"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatTextView>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView3"
        android:layout_width="235dp"
        android:layout_height="238dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
        app:srcCompat="@drawable/ic_humaaan_10" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/logUser"
        android:layout_width="319dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn2_style"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView3" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/appCompatEditText"
        android:layout_width="319dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn2_style"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logUser" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/homeRegBtn"
        android:layout_width="319dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_style"
        android:text="@string/login"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>